Added business and data project

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 Solution/DatoriumBank/DatoriumBank.Console/bin/
 Solution/DatoriumBank/DatoriumBank.Console/obj/
 Solution/DatoriumBank/.vs/
+Solution/DatoriumBank/DatoriumBank.Data/obj/
+Solution/DatoriumBank/DatoriumBank.Data/bin/
+Solution/DatoriumBank/DatoriumBank.Business/bin/
+Solution/DatoriumBank/DatoriumBank.Business/obj/
