--- a/Solution/DatoriumBank/DatoriumBank.Console/DatoriumBank.Console.csproj
+++ b/Solution/DatoriumBank/DatoriumBank.Console/DatoriumBank.Console.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DatoriumBank.Business\DatoriumBank.Business.csproj" />
     <ProjectReference Include="..\DatoriumBank.Data\DatoriumBank.Data.csproj" />
   </ItemGroup>
 
