Made API project and EF project

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ Solution/DatoriumBank/DatoriumBank.Data/obj/
 Solution/DatoriumBank/DatoriumBank.Data/bin/
 Solution/DatoriumBank/DatoriumBank.Business/bin/
 Solution/DatoriumBank/DatoriumBank.Business/obj/
+API/Tindorium/.vs/
+API/Tindorium/Tindorium.API/obj/
+API/Tindorium/Tindorium.API/bin/
+API/Tindorium/Tindorium.Data/obj/
+API/Tindorium/Tindorium.Data/bin/
+API/Tindorium/Tindorium.API/bin/
