--- a/API/Tindorium/Tindorium.API/Properties/launchSettings.json
+++ b/API/Tindorium/Tindorium.API/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "user/ping",
       "applicationUrl": "https://localhost:7157;http://localhost:5153",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
