--- a/API/Tindorium/Tindorium.API/Tindorium.API.csproj
+++ b/API/Tindorium/Tindorium.API/Tindorium.API.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tindorium.Data\Tindorium.Data.csproj" />
+  </ItemGroup>
+
 </Project>
